force-app/main/default/objects/AWS_Setting__mdt/fields/AWS_Access_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>AWS_Access_Key_Id__c</fullName>
    <label>AWS Access Key Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>