force-app/main/default/objects/AWS_Setting__mdt/fields/AWS_Secret_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Secret_Access_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>AWS Secret Access Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>