force-app/main/default/objects/AWS_Setting__mdt/fields/S3_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>S3_Region_Name__c</fullName>
    <label>S3 Region Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>